--- a/www/lib/onsen/css/onsen-css-components.css
+++ b/www/lib/onsen/css/onsen-css-components.css
@@ -340,7 +340,7 @@ input:disabled + .switch__toggle {
 }
 .switch.switch--material input:checked + .switch__toggle .switch__handle {
   left: 16px;
-  background-color: #1ed059;
+  background-color: #54c73c;
   -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
@@ -583,8 +583,8 @@ ons-range[disabled] .range {
   -webkit-border-radius: 0;
   border-radius: 0;
   background-color: transparent;
-  background-image: -webkit-radial-gradient(7px, circle 6px, #1ed059 0%, #1ed059 6px, transparent 7px);
-  background-image: radial-gradient(circle 6px at 7px, #1ed059 0%, #1ed059 6px, transparent 7px);
+  background-image: -webkit-radial-gradient(7px, circle 6px, #54c73c 0%, #54c73c 6px, transparent 7px);
+  background-image: radial-gradient(circle 6px at 7px, #54c73c 0%, #54c73c 6px, transparent 7px);
   margin-top: -1px;
 }
 .range--material::-moz-range-thumb {
@@ -593,8 +593,8 @@ ons-range[disabled] .range {
   height: 12px;
   width: 12px;
   border-radius: 100%;
-  border-color: #1ed059;
-  background-color: #1ed059;
+  border-color: #54c73c;
+  background-color: #54c73c;
 }
 .range--material::-moz-range-track {
   background-color: #e0e0e0;
@@ -605,12 +605,12 @@ ons-range[disabled] .range {
   height: 12px;
   width: 12px;
   border-radius: 100%;
-  border-color: #1ed059;
-  background-color: #1ed059;
+  border-color: #54c73c;
+  background-color: #54c73c;
 }
 .range--material:focus::-moz-range-thumb {
-  border-color: #1ed059;
-  background-color: #1ed059;
+  border-color: #54c73c;
+  background-color: #54c73c;
 }
 .range--material::-moz-range-thumb:before {
   display: none;
@@ -619,7 +619,7 @@ ons-range[disabled] .range {
   display: none;
 }
 .range--material::-ms-fill-lower {
-  background-color: #1ed059;
+  background-color: #54c73c;
 }
 .range--material::-moz-range-thumb:after {
   margin-top: -3px;
@@ -630,7 +630,7 @@ ons-range[disabled] .range {
   border-radius: 100%;
   height: 12px;
   width: 12px;
-  background-color: #1ed059;
+  background-color: #54c73c;
   opacity: 0.2;
   -moz-transition: -moz-transform 0.1s linear;
   transition: transform 0.1s linear;
@@ -645,7 +645,7 @@ ons-range[disabled] .range {
   border-radius: 100%;
   height: 12px;
   width: 12px;
-  background-color: #1ed059;
+  background-color: #54c73c;
   opacity: 0.2;
   -webkit-transition: -webkit-transform 0.1s linear;
   transition: transform 0.1s linear;
@@ -662,7 +662,7 @@ ons-range[disabled] .range {
   border-radius: 100%;
   height: 12px;
   width: 12px;
-  background-color: #1ed059;
+  background-color: #54c73c;
   opacity: 0.2;
   transition: transform 0.1s linear;
 }
@@ -679,7 +679,7 @@ ons-range[disabled] .range {
   transform: scale(2.5);
 }
 .range--material__left {
-  background-color: #1ed059;
+  background-color: #54c73c;
 }
 /* topdoc
   name: Navigation Bar
@@ -1045,7 +1045,7 @@ ons-range[disabled] .range {
   -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
   box-shadow: 0 1px 5px rgba(0,0,0,0.3);
   padding: 0;
-  background-color: #1ed059;
+  background-color: #54c73c;
   -webkit-background-size: 0;
   background-size: 0;
 }
@@ -1708,7 +1708,7 @@ ons-range[disabled] .range {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   text-transform: uppercase;
-  background-color: #1ed059;
+  background-color: #54c73c;
   color: #fff;
   font-family: 'Roboto', 'Noto', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -1717,7 +1717,7 @@ ons-range[disabled] .range {
 .button--material:active {
   -webkit-box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px -1px rgba(0,0,0,0.4);
   box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12), 0 3px 5px -1px rgba(0,0,0,0.4);
-  background-color: #1ed059;
+  background-color: #54c73c;
   opacity: 1;
 }
 .button--material:focus {
@@ -1801,7 +1801,7 @@ ons-range[disabled] .range {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   text-transform: uppercase;
-  background-color: #1ed059;
+  background-color: #54c73c;
   color: #fff;
   font-family: 'Roboto', 'Noto', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -1809,13 +1809,13 @@ ons-range[disabled] .range {
   -webkit-box-shadow: none;
   box-shadow: none;
   background-color: transparent;
-  color: #1ed059;
+  color: #54c73c;
 }
 .button--material--flat:active {
   -webkit-box-shadow: none;
   box-shadow: none;
   background-color: transparent;
-  color: #1ed059;
+  color: #54c73c;
   outline: 0;
   opacity: 1;
   border: none;
@@ -1824,7 +1824,7 @@ ons-range[disabled] .range {
   -webkit-box-shadow: none;
   box-shadow: none;
   background-color: transparent;
-  color: #1ed059;
+  color: #54c73c;
   outline: 0;
   opacity: 1;
   border: none;
@@ -2404,7 +2404,7 @@ ons-range[disabled] .range {
   border-bottom: 4px solid rgba(24,103,194,0.81);
 }
 .tab-bar--material {
-  background-color: #1ed059;
+  background-color: #54c73c;
   border-bottom-width: 0px;
   -webkit-box-shadow: 0 4px 2px -2px rgba(0,0,0,0.14), 0 3px 5px -2px rgba(0,0,0,0.12), 0 5px 1px -4px rgba(0,0,0,0.2);
   box-shadow: 0 4px 2px -2px rgba(0,0,0,0.14), 0 3px 5px -2px rgba(0,0,0,0.12), 0 5px 1px -4px rgba(0,0,0,0.2);
@@ -3106,7 +3106,7 @@ ons-range[disabled] .range {
   border: 2px solid #717171;
 }
 .checkbox--material__input:checked + .checkbox--material__checkmark:before {
-  background-color: #1ed059;
+  background-color: #54c73c;
   border: none;
 }
 .checkbox--material__input + .checkbox--material__checkmark:after {
@@ -3377,7 +3377,7 @@ ons-range[disabled] .range {
 }
 .radio-button--material__input:checked + .radio-button__checkmark:before {
   background: transparent;
-  border: 2px solid #1ed059;
+  border: 2px solid #54c73c;
 }
 .radio-button--material__input + .radio-button__checkmark:after {
   background: #717171;
@@ -3390,7 +3390,7 @@ ons-range[disabled] .range {
 }
 .radio-button--material__input:checked + .radio-button__checkmark:after {
   opacity: 1;
-  background: #1ed059;
+  background: #54c73c;
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
@@ -4765,14 +4765,14 @@ input[type="search"].search-input::-webkit-search-cancel-button {
   -webkit-transform: translate3d(0, 0, 0);
 }
 .text-input--material__label {
-  color: #1ed059;
+  color: #54c73c;
 }
 .text-input--material:focus {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#1ed059), to(#1ed059)), -webkit-gradient(linear, left bottom, left top, color-stop(1px, transparent), color-stop(1px, #afafaf));
-  background-image: -webkit-linear-gradient(#1ed059, #1ed059), -webkit-linear-gradient(bottom, transparent 1px, #afafaf 1px);
-  background-image: -moz-linear-gradient(#1ed059, #1ed059), -moz-linear-gradient(bottom, transparent 1px, #afafaf 1px);
-  background-image: -o-linear-gradient(#1ed059, #1ed059), -o-linear-gradient(bottom, transparent 1px, #afafaf 1px);
-  background-image: linear-gradient(#1ed059, #1ed059), linear-gradient(to top, transparent 1px, #afafaf 1px);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#54c73c), to(#54c73c)), -webkit-gradient(linear, left bottom, left top, color-stop(1px, transparent), color-stop(1px, #afafaf));
+  background-image: -webkit-linear-gradient(#54c73c, #54c73c), -webkit-linear-gradient(bottom, transparent 1px, #afafaf 1px);
+  background-image: -moz-linear-gradient(#54c73c, #54c73c), -moz-linear-gradient(bottom, transparent 1px, #afafaf 1px);
+  background-image: -o-linear-gradient(#54c73c, #54c73c), -o-linear-gradient(bottom, transparent 1px, #afafaf 1px);
+  background-image: linear-gradient(#54c73c, #54c73c), linear-gradient(to top, transparent 1px, #afafaf 1px);
   -webkit-animation: material-text-input-animate 0.3s forwards;
   -moz-animation: material-text-input-animate 0.3s forwards;
   -o-animation: material-text-input-animate 0.3s forwards;
@@ -5406,7 +5406,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
   font-size: 14px;
   font-weight: 500;
   outline: none;
-  color: #1ed059;
+  color: #54c73c;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .alert-dialog-button--material {
@@ -5766,7 +5766,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
 .progress-bar--determinate > .progress-bar__primary,
 .progress-bar--determinate > .progress-bar__secondary {
   position: absolute;
-  background-color: #1ed059;
+  background-color: #54c73c;
   top: 0;
   bottom: 0;
   -webkit-transition: width 0.3s linear;
@@ -5782,7 +5782,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
 .progress-bar--indeterminate:before {
   content: '';
   position: absolute;
-  background-color: #1ed059;
+  background-color: #54c73c;
   top: 0;
   left: 0;
   bottom: 0;
@@ -5795,7 +5795,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
 .progress-bar--indeterminate:after {
   content: '';
   position: absolute;
-  background-color: #1ed059;
+  background-color: #54c73c;
   top: 0;
   left: 0;
   bottom: 0;
@@ -5950,7 +5950,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
   -moz-animation: progress__dash 1.5s ease-in-out infinite;
   -o-animation: progress__dash 1.5s ease-in-out infinite;
   animation: progress__dash 1.5s ease-in-out infinite;
-  stroke: #1ed059;
+  stroke: #54c73c;
   -webkit-transition: all 1s cubic-bezier(0.4, 0, 0.2, 1);
   -moz-transition: all 1s cubic-bezier(0.4, 0, 0.2, 1);
   -o-transition: all 1s cubic-bezier(0.4, 0, 0.2, 1);
@@ -6110,7 +6110,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
   color: #fff;
   vertical-align: middle;
   text-align: center;
-  background-color: #1ed059;
+  background-color: #54c73c;
   border: 0px solid currentColor;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -6125,7 +6125,7 @@ input[type="search"].search-input::-webkit-search-cancel-button {
 .fab:active {
   -webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.4);
   box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.4);
-  background-color: #1ed059;
+  background-color: #54c73c;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -o-transition: all 0.2s ease;
