--- a/www/css/rewards.css
+++ b/www/css/rewards.css
@@ -15,7 +15,7 @@ h3 {
 .meter {
     height: 20px; /* Can be anything */
     display: inline-block;
-    width: 30%;
+    width: 70%;
     position: relative;
     background: #555;
     -moz-border-radius: 25px;
@@ -37,6 +37,25 @@ h3 {
             center bottom,
             #669fe1 37%,
             #669fe1 69%
+    );
+    box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+    position: relative;
+    overflow: hidden;
+}
+
+.meter.full > span {
+    display: block;
+    height: 100%;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: #99e134;
+    background-image: linear-gradient(
+            center bottom,
+            #99e134 37%,
+            #99e134 69%
     );
     box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
     inset 0 -2px 6px rgba(0, 0, 0, 0.4);
@@ -92,11 +111,11 @@ h3 {
 
 .circle {
     position: absolute;
-    margin-left: 25%;
-    margin-top: 25%;
-    height: 50%;
+    margin-left: 20%;
+    margin-top: 20%;
+    height: 60%;
     text-align: center;
-    width: 50%;
+    width: 60%;
     border-radius: 50%;
     font-size: 40px;
     font-weight: bold;
@@ -121,6 +140,68 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+
+@keyframes move {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 50px 50px;
+    }
+}
+
+.meter > span:after, .animate > span > span {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    background-image:
+            -webkit-gradient(linear, 0 0, 100% 100%,
+            color-stop(.25, rgba(255, 255, 255, .2)),
+            color-stop(.25, transparent), color-stop(.5, transparent),
+            color-stop(.5, rgba(255, 255, 255, .2)),
+            color-stop(.75, rgba(255, 255, 255, .2)),
+            color-stop(.75, transparent), to(transparent)
+            );
+    background-image:
+            -moz-linear-gradient(
+                    -45deg,
+                    rgba(255, 255, 255, .2) 25%,
+                    transparent 25%,
+                    transparent 50%,
+                    rgba(255, 255, 255, .2) 50%,
+                    rgba(255, 255, 255, .2) 75%,
+                    transparent 75%,
+                    transparent
+            );
+    z-index: 1;
+    -webkit-background-size: 50px 50px;
+    -moz-background-size: 50px 50px;
+    background-size: 50px 50px;
+    -webkit-animation: move 2s linear infinite;
+    -moz-animation: move 2s linear infinite;
+    -webkit-border-top-right-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -moz-border-radius-bottomright: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-bottomleft: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    overflow: hidden;
+}
+
+.meter > span:after, .animate > span > span {
+    animation: move 2s linear infinite;
+}
+
+@keyframes expandWidth {
+    0% { width: 0; }
 }
 
 
