--- a/www/style.css
+++ b/www/style.css
@@ -227,13 +227,14 @@ ons-list-item.list__item.list__item--material.list__item--longdivider {
     color: #54c73c;
 }
 
-#win{
+#win {
     position: absolute;
-    width:100%;
-    top:0px;
+    width: 100%;
+    top: 0px;
     height: 70%;
 }
-#rewardSecret{
+
+#rewardSecret {
     font-size: 28px;
     font-weight: bold;
     color: #a4fdff;
@@ -241,4 +242,73 @@ ons-list-item.list__item.list__item--material.list__item--longdivider {
 
 .modal__content {
     background-color: #393d48;
+}
+
+#picShop {
+    width: 100%;
+    height: 35%;
+    border-bottom: 2px solid #59a5e0;
+    background-image: url(img/prada.jpg);
+    background-size: cover;
+    background-position-y: -30px;
+}
+
+#nameShop {
+    position: relative;
+    width: 100%;
+    height: 45px;
+    color: black;
+    font-size: 24px;
+    text-align: center;
+    border-bottom: 2px solid #59a5e0;
+    font-weight: bold;
+    line-height: 40px;
+    background-image: url(img/pradalogo.jpg);
+    background-size: cover;
+    background-position: 55% 45%;
+}
+#opening {
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    font-style: italic;
+    background-color: #59a5e0;
+    color: white;
+    line-height: 20px;
+}
+
+#infoShop {
+    background-color:#f6f6f6;
+    font-style: italic;
+    width:100%;
+    height:auto;
+    font-size: 14px;
+    padding:10px;
+    box-sizing: border-box;
+    border-bottom:1px solid #59a5e0;
+}
+
+.discountPrada{
+    width:100%;
+    background-color: #f6f6f6;;
+    text-align: center;
+}
+.nameDiscount{
+    width:100%;
+    height:25px;
+    color: black;
+    font-weight: bold;
+    line-height: 25px;
+}
+.descDiscount{
+    background-color: #f6f6f6;;
+    font-style: italic;
+    width:100%;
+    height:auto;
+    font-size: 14px;
+    padding:10px;
+    box-sizing: border-box;
+    border-bottom:1px solid #59a5e0;
 }
