--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -2,127 +2,29 @@
 .spider {  margin-left:10%; display: inline-block;  }
 
 
-h3 {
-    text-align: center;
-    color: #000000;
-    font-size: 20px;
-    font-weight: bold;
-    font-style:normal;
-    font-family: "Roboto", helvetica, arial, sans-serif;
-    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-}
-
-/*** Table Styles **/
-
-.table-fill {
-    background: #669fe1;
-    border-radius: 3px;
-    border-collapse: collapse;
-    margin: 0;
-    width: 100%;
-    padding: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    animation: float 5s infinite;
-}
-
-th {
-    color: #000000;;
-    background: white;
-    border-bottom: 4px solid #669fe1;
-    border-top: 2px solid #669fe1;
-    border-right: 1px solid #343a45;
-    font-size: 23px;
-    font-weight: 100;
-    padding: 24px;
+.indicator {
     text-align: left;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    vertical-align: middle;
-}
-
-th:first-child {
-    border-top-left-radius: 3px;
-}
-
-th:last-child {
-    border-top-right-radius: 3px;
-    border-right: none;
-}
-
-tr {
-    border-top: 1px solid #669fe1;
-    border-bottom-: 1px solid #5fb7e1;
-    color: white;
-    font-size: 16px;
+    width: 80%;
     font-weight: normal;
-    text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-tr:hover td {
-    background: #4E5066;
-    color: #FFFFFF;
-    border-top: 1px solid #22262e;
-    border-bottom: 1px solid #22262e;
-}
-
-tr:first-child {
-    border-top: none;
-}
-
-tr:last-child {
-    border-bottom: none;
-}
-
-tr:nth-child(odd) td {
-    background: #648fe1;
-}
-
-tr:nth-child(odd):hover td {
-    background: #4E5066;
-}
-
-tr:last-child td:first-child {
-    border-bottom-left-radius: 3px;
-}
-
-tr:last-child td:last-child {
-    border-bottom-right-radius: 3px;
-}
-
-td {
-    background: #444444;
-    padding: 10px 20px;
-    text-align: left;
+.brand {
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
     vertical-align: middle;
-    font-weight: 300;
-    font-size: 18px;
-    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-    border-right: 1px solid #C1C3D1;
+    height: 100%;
 }
 
-td:last-child {
-    border-right: 0px;
-}
-
-th.text-left {
-    text-align: left;
-}
-
-th.text-center {
+.brandItem {
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(214, 237, 255);
     text-align: center;
-}
-
-th.text-right {
-    text-align: right;
-}
-
-td.text-left {
-    text-align: left;
-}
-
-td.text-center {
-    text-align: center;
-}
-
-td.text-right {
-    text-align: right;
+    vertical-align: middle;
+    line-height: 20px;
 }
